--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "oliwier_pakula_photography",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
-  "homepage": "https://karoljurczynski.github.io/o_p_photography/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "firebase": "^9.0.2",
     "gh-pages": "^3.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-scripts": "4.0.3",
     "smooth-scrollbar": "^8.6.1",
     "web-vitals": "^1.1.0"
@@ -20,8 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
